# evo

./: .clang-format  CMakeLists.txt  README.md  aes-manifest.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: code-change.yml
.github/workflows/: ci.yml  quality.yml  sanitizers.yml
benchmarks/: README.md
docs/: algorithms.md  architecture.md  benchmarks.md  theory.md
docs/adr/: ADR-0001-library-boundary-and-build-system.md
docs/engineering/: AES-DEV-001-development-principles.md  AES-SEC-001-waivers.md  SECURE-C-CXX.md
docs/engineering/reports/: AES-DEV-001-AES-SEC-001-audit-2026-07-12.md
examples/compiler/: README.md
examples/fpga-placement/: README.md
examples/repository-scoring/: README.md
examples/scheduler/: README.md
include/catalyst/evo/: evo.h
src/: checkpoint.c  crossover.c  diversity.c  fitness.c  mutation.c  population.c  rng.c  selection.c  statistics.c
tests/: CMakeLists.txt  smoke_test.c
